<resources>
    <string name="app_name">GestureRecognitionWebchat</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="new_chat_fragment">Начать Видеочат</string>
    <string name="chat_fragment">Чаты</string>
    <string name="notification_fragment">Уведомления</string>
    <string name="stat_fragment">Статистика</string>
    <string name="account_fragment">Аккаунт</string>
    <string name="account_conf">Конфиденцальность</string>
    <string name="account_agr">Соглашение</string>
    <string name="fragment_launcher">Launch</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="fragment_label_register">Second Fragment</string>
    <string name="fragment_label_login">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_test">Test</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_change">ChangeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
</resources>